[package]
name = "stetson"
version = "0.1.1"
authors = ["hexcowboy"]
edition = "2021"

keywords = ["pubsub", "publish", "subscribe", "server", "websockets"]
description = "A pure rust pubsub server over HTTP websockets."

repository = "https://github.com/hexcowboy/stetson"
license = "MIT"
readme = "README.md"
exclude = ["/.github", "/examples"]

[dependencies]
axum = { version = "0.6.17", features = ["ws"] }
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["tracing", "trace"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
