[package]
name = "stetson"
version = "0.1.1"
authors = ["hexcowboy"]
edition = "2021"

keywords = ["pubsub", "publish", "subscribe", "server", "websockets"]
description = "A pure rust pubsub server over HTTP websockets."

repository = "https://github.com/hexcowboy/stetson"
license = "MIT"
readme = "README.md"
exclude = ["/.github", "/examples"]

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
